# diakonia-open

./: .gitignore  .travis.yml  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  pyproject.toml
config/: settings.py  urls.py  wsgi.py
config/settings/: .env.template  common.py  development.py  staging.py
diakonia/: __init__.py
diakonia/cerner_test/: index.html  scpview.py
diakonia/eyeaux/: admin.py  apps.py  excel_utils.py  export_utils.py  forms.py  models.py  views.py
diakonia/eyeaux/migrations/: 0001_initial.py  0002_auto_20161004_1438.py  0003_auto_20161020_1228.py  0004_auto_20161025_1215.py  0005_auto_20171215_1458.py
diakonia/eyeaux/tmp/: NHIC_TRA_1.6.0.xsd  NHIC_TRA_1.7.0.xsd  NHIC_TRA_1.7.1.xsd
diakonia/fhirstation/: apps.py
diakonia/static/: index.html
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs-source/: Makefile  conf.py  index.rst
docs-source/_build/doctrees/: environment.pickle  index.doctree
docs-source/_files/: Pancreas Database Discussion_27Jul2016.docx  Pancreas Meeting Minutes_26Aug2016.docx  Pancreas Meeting Minutes_27Oct2016.docx
docs-source/_source/: development.md  introduction.md
docs-source/_source/CernerDev/: database.md  index.md  notes.md  test.md
docs-source/_source/PancreasDB/: requirements.md
docs-source/_source/TransplantEPR/: PathwayNotes.md  index.rst  introduction.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: objects.inv  py-modindex.html  search.html  searchindex.js
docs/_files/: ASSESSMENT DOC (New) updated April 16.docx  Pancreas Meeting Minutes_02Sep2016.docx
docs/_modules/: index.html
docs/_source/: development.html  development.md  introduction.html  introduction.md  notes.html  notes.md  project_management.html  project_management.md  requirements.html  requirements.md  user_stories.html
docs/_source/BMT/: index.html
docs/_source/CernerDev/: database.html  debug.html  index.html  notes.html  test.html
docs/_source/FHIRstation/: index.html  index.md  introduction.html  introduction.md  tests.html
docs/_source/NHIC/: index.html  index.md  introduction.html  introduction.md  mapping_notes.html  process.html
docs/_source/PancreasDB/: governance.html  index.html  index.md  index.rst  (+5 more)
docs/_sources/: index.rst.txt
requirements/: common.txt  development-win.txt  development.txt  production.txt
to-remove/requirements/: common.txt  production.txt  staging.txt  travis.txt
(+129 files in other folders)
