[tool.poetry]
name = "diakonia-open"
version = "0.1.1"
description = "Ministers to the data needs of the departments. Collection of custom app developments for clinical data analysis or support."
authors = ["Carl Marshall <marshalc@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6 <4"
django = "~3"
django-environ = "^0.4.5"
# Eyeaux dependancies
pytz = ""
XlsxWriter = "~1.3"
openpyxl = "~3"
bdateutil = ""
lxml = "~4.5"
# Documentation dependancies
sphinx = "~3"
sphinx_rtd_theme = "~0.5"
sphinxcontrib-spelling = "~5"
pyenchant = "~3"
recommonmark = ""

[tool.poetry.dev-dependencies]
django-extensions = "~3"
django-debug-toolbar = "~2"
pygraphviz = "^1.5"  # Needed for django-extensions to fully work
# NB: to get this to install you may need to do it manually with...
# pip install pygraphviz --install-option="--include-path=/usr/local/include/graphviz" --install-option="--library-path=/usr/local/lib/graphviz"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"




## A list of all of the optional dependencies, some of which are included in the
## below `extras`. They can be opted into by apps.
#psycopg2 = { version = "^2.7", optional = true }
#mysqlclient = { version = "^1.3", optional = true }
#
#[tool.poetry.extras]
#mysql = ["mysqlclient"]
#pgsql = ["psycopg2"]
